--- a/VisualPinball.Unity/VisualPinball.Unity/VisualPinball.Unity.csproj
+++ b/VisualPinball.Unity/VisualPinball.Unity/VisualPinball.Unity.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <Title>VisualPinball.Unity</Title>
     <Description>A bridge between VisualPinball.Engine and Unity</Description>
     <Authors>freezy;ravarcade;shaderbytes;rbxnk;jsm174;Vroonsh;Rowlan;kleisauke;ecurtz;Pandeli</Authors>
@@ -8,8 +8,9 @@
     <AssemblyVersion>0.1.0.0</AssemblyVersion>
     <AssemblyFileVersion>0.1.0.0</AssemblyFileVersion>
     <InformationalVersion>0.1.0.0</InformationalVersion>
-    <LangVersion>8</LangVersion>
+    <LangVersion>9.0</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DefineConstants>UNITY_EDITOR</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="**/*.meta" Visible="false" />
@@ -34,6 +35,18 @@
     <Reference Include="UnityEngine.ImageConversionModule">
       <HintPath>..\Plugins\.unity\UnityEngine.ImageConversionModule.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.IMGUIModule">
+      <HintPath>..\Plugins\.unity\UnityEngine.IMGUIModule.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.AudioModule">
+      <HintPath>..\Plugins\.unity\UnityEngine.AudioModule.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor">
+      <HintPath>..\Plugins\.unity\UnityEditor.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor.CoreModule">
+      <HintPath>..\Plugins\.unity\UnityEditor.CoreModule.dll</HintPath>
+    </Reference>
     <Reference Include="Unity.Collections">
       <HintPath>..\Plugins\.unity\Unity.Collections.dll</HintPath>
     </Reference>
@@ -43,22 +56,16 @@
     <Reference Include="Unity.Mathematics.Extensions">
       <HintPath>..\Plugins\.unity\Unity.Mathematics.Extensions.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.Mathematics.Extensions.Hybrid">
-      <HintPath>..\Plugins\.unity\Unity.Mathematics.Extensions.Hybrid.dll</HintPath>
-    </Reference>
     <Reference Include="Unity.Entities">
       <HintPath>..\Plugins\.unity\Unity.Entities.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Entities.Hybrid">
       <HintPath>..\Plugins\.unity\Unity.Entities.Hybrid.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.Rendering.Hybrid">
-      <HintPath>..\Plugins\.unity\Unity.Rendering.Hybrid.dll</HintPath>
-    </Reference>
     <Reference Include="Unity.Transforms">
       <HintPath>..\Plugins\.unity\Unity.Transforms.dll</HintPath>
     </Reference>
-    <Reference Include="UnitEngine.InputSystem">
+    <Reference Include="UnityEngine.InputSystem">
       <HintPath>..\Plugins\.unity\Unity.InputSystem.dll</HintPath>
     </Reference>
   </ItemGroup>
