--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "com.unity.jobs": "0.8.0-preview.23",
     "com.unity.mathematics": "1.2.5",
     "com.unity.inputsystem": "1.2.0",
-    "com.unity.test-framework": "1.1.30",
-    "com.unity.visualscripting": "1.7.6"
+    "com.unity.test-framework": "1.1.30"
   },
   "keywords": [
     "Pinball",
