--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/VisualPinball.Unity.Editor.asmdef
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/VisualPinball.Unity.Editor.asmdef
@@ -1,21 +1,25 @@
 {
-	"name": "VisualPinball.Unity.Editor",
-	"references": [
-		"Unity.Entities",
-		"Unity.Entities.Hybrid",
-		"Unity.Mathematics",
-		"Unity.Transforms",
-		"Unity.InputSystem",
-		"VisualPinball.Engine",
-		"VisualPinball.Unity",
-		"VisualPinball.Unity.Patcher"
-	],
-	"includePlatforms": [ "Editor" ],
-	"allowUnsafeCode": true,
-	"overrideReferences": false,
-	"precompiledReferences": [],
-	"autoReferenced": true,
-	"defineConstraints": [],
-	"versionDefines": [],
-	"noEngineReferences": false
+    "name": "VisualPinball.Unity.Editor",
+    "rootNamespace": "",
+    "references": [
+        "Unity.Entities",
+        "Unity.Entities.Hybrid",
+        "Unity.Mathematics",
+        "Unity.Transforms",
+        "Unity.InputSystem",
+        "VisualPinball.Engine",
+        "VisualPinball.Unity",
+        "VisualPinball.Unity.Patcher"
+    ],
+    "includePlatforms": [
+        "Editor"
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": true,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
