--- a/VisualPinball.Unity/Documentation~/creators-guide/toc.yml
+++ b/VisualPinball.Unity/Documentation~/creators-guide/toc.yml
@@ -96,8 +96,8 @@
         href: manual/mechanisms/drop-target-banks.md
       - name: Rotators
         href: manual/mechanisms/rotators.md
-      - name: Score Motor
-        href: manual/mechanisms/score-motor.md
+      - name: Score Motors
+        href: manual/mechanisms/score-motors.md
       - name: Collision Switches
         href: manual/mechanisms/collision-switches.md
       - name: Lifting Gates
