packaging: First prototype.

--- a/VisualPinball.Engine/VisualPinball.Engine.csproj
+++ b/VisualPinball.Engine/VisualPinball.Engine.csproj
@@ -29,7 +29,8 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="NLog" Version="4.7.15" />
-    <PackageReference Include="OpenMcdf" Version="2.2.1.9" />
+    <PackageReference Include="OpenMcdf" Version="2.4.1" />
+    <PackageReference Include="OpenMcdf.Extensions" Version="2.4.0" />
     <PackageReference Include="NetMiniZ" Version="1.4.0-preview.2" />
     <PackageReference Include="NetMiniZ.Native" Version="1.4.0" />
     <PackageReference Include="NetVips" Version="2.1.0" />
@@ -54,6 +55,7 @@
     <ItemGroup>
       <Plugins Include="$(OutDir)NLog.dll" />
       <Plugins Include="$(OutDir)OpenMcdf.dll" />
+      <Plugins Include="$(OutDir)OpenMcdf.Extensions.dll" />
       <Plugins Include="$(OutDir)NetMiniZ.dll" />
       <Plugins Include="$(OutDir)NetVips.dll" />
       <Plugins Include="$(OutDir)System.Buffers.dll" />
