packaging: Include coil, switch, wire and lamp mappings.

--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/VisualPinball.Unity.Editor.asmdef
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/VisualPinball.Unity.Editor.asmdef
@@ -1,16 +1,15 @@
 {
     "name": "VisualPinball.Unity.Editor",
-    "rootNamespace": "",
+    "rootNamespace": "VisualPinball.Unity.Editor",
     "references": [
-		"glTFast",
-		"glTFast.Editor",
-		"glTFast.Newtonsoft",
+        "glTFast",
+        "glTFast.Editor",
+        "glTFast.Export",
+        "glTFast.Newtonsoft",
         "Unity.Collections",
         "Unity.Formats.Fbx.Editor",
         "Unity.Mathematics",
-        "Unity.Transforms",
         "Unity.InputSystem",
-        "Unity.Scenes",
         "VisualPinball.Engine",
         "VisualPinball.Unity",
         "VisualPinball.Unity.Patcher"
