packaging: Add JSON support and clean up packables.

--- a/VisualPinball.Unity/VisualPinball.Unity/VisualPinball.Unity.asmdef
+++ b/VisualPinball.Unity/VisualPinball.Unity/VisualPinball.Unity.asmdef
@@ -10,7 +10,8 @@
         "Unity.InputSystem",
         "VisualPinball.Engine",
         "com.bartofzo.nativetrees",
-        "MemoryPack.Unity"
+        "MemoryPack.Unity",
+		"Newtonsoft.Json"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
