Update MPF documentation

--- a/VisualPinball.Unity/Documentation~/plugins/toc.yml
+++ b/VisualPinball.Unity/Documentation~/plugins/toc.yml
@@ -28,3 +28,7 @@
     href: mpf/setup.md
   - name: Usage
     href: mpf/usage.md
+  - name: Configuration
+    href: mpf/configuration.md
+  - name: Technical details
+    href: mpf/technical-details.md
