doc: Update style guide with illustrations.

--- a/VisualPinball.Unity/Documentation~/creators-guide/toc.yml
+++ b/VisualPinball.Unity/Documentation~/creators-guide/toc.yml
@@ -20,8 +20,8 @@
       href: editor/unity-components.md
     - name: Materials
       href: editor/materials.md
-    - name: Asset Library
-      href: editor/asset-library.md
+    - name: Asset Library Style Guide
+      href: editor/asset-library-styleguide.md
     - name: Switch Manager
       href: editor/switch-manager.md
     - name: Coil Manager
