doc: Document sound features for table authors

--- a/VisualPinball.Unity/Documentation~/creators-guide/toc.yml
+++ b/VisualPinball.Unity/Documentation~/creators-guide/toc.yml
@@ -93,6 +93,8 @@
       href: manual/gamelogic-engine.md
     - name: Displays
       href: manual/displays.md
+    - name: Sound
+      href: manual/sound.md
     - name: Pinball Mechanisms
       items:
       - name: Troughs / Ball Drains
