doc: Media controller

--- a/VisualPinball.Unity/Documentation~/plugins/toc.yml
+++ b/VisualPinball.Unity/Documentation~/plugins/toc.yml
@@ -30,5 +30,7 @@
     href: mpf/usage.md
   - name: Configuration
     href: mpf/configuration.md
+  - name: Media Controller
+    href: mpf/media-controller.md
   - name: Technical details
     href: mpf/technical-details.md
