fix: Attempt 5 to fix npm auth.

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "changelogUrl": "https://docs.visualpinball.org/CHANGELOG.html",
   "licensesUrl": "https://github.com/freezy/VisualPinball.Engine/blob/master/LICENSE",
   "publishConfig": {
-    "registry": "https://registry.visualpinball.org"
+    "registry": "https://registry.visualpinball.org/"
   },
   "repository": {
     "url": "https://github.com/freezy/VisualPinball.Engine",
