--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-          registry-url: 'https://registry.visualpinball.org'
+          registry-url: 'https://registry.visualpinball.org/'
           always-auth: true
 
       - name: Configure npm auth
@@ -45,11 +45,11 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-      - name: Verify npm auth
-        run: npm whoami --registry=https://registry.visualpinball.org/
+      - name: Debug
+        run: npm config get registry && npm config list --location=project    
 
-      - name: Publish
-        run: npm publish --registry=https://registry.visualpinball.org/
+      - name: Publish (verbose)
+        run: npm --loglevel=verbose publish --registry=https://registry.visualpinball.org/
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
